# worker

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Gemfile  build.gradle  build.sh  deployment  detekt-baseline.xml  gradle.properties  jacoco.gradle  readme.md  robolectric.gradle  settings.gradle  sonar-project.properties  sonarqube.gradle  versioning.gradle
.gitlab-ci/: android.yml  gradle.yml
api/: Cargo.toml
api/src/: main.rs
app/: build.gradle  google-services.json  jacoco.gradle  lint.xml  proguard-rules.pro  proguard-test-rules.pro
app/sampledata/: projects.json
app/schemas/me.raatiniemi.worker.data.Database/: 2.json  3.json
app/schemas/me.raatiniemi.worker.data.room.Database/: 1.json  3.json
app/src/debug/: AndroidManifest.xml
app/src/debug/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/debug/res/values/: ic_launcher_background.xml
app/src/instrumented/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/play/: contact-email.txt
app/src/main/play/en-US/: whatsnew
app/src/main/res-main/drawable/: ic_empty_projects.xml  projects_item_action_background.xml  projects_item_action_background_activated.xml
app/src/main/res-main/layout/: activity_project.xml  activity_settings.xml  fragment_new_project.xml  fragment_time_report_item.xml
assets/: application-icon.xcf  playstore_icon.sketch
core/: build.gradle
core-test/: build.gradle
fastlane/metadata/android/en-US/: short_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
policy/: index.html
(+1918 files in other folders)
