[package]
name = "api"
version = "0.0.1"
authors = ["Tobias Raatiniemi <raatiniemi@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
axum = "0.7.7"
tokio = { version = "1.40.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1.0.132"
